--- a/about-us.html
+++ b/about-us.html
@@ -17,7 +17,7 @@
             <nav class="header__menu">
                 <a class="header__logo-link" href="#"><img src="assets/images/logo.svg" alt="logo"></a>
                 <ul class="header__menu-items">
-                    <li class="header__menu-list"><a href="about-us.html">Про нас</a></li>
+                    <li class="header__menu-list"><a href="#">Про нас</a></li>
                     <li class="header__menu-list"><a href="#">Послуги та ціни</a></li>
                     <li class="header__menu-list"><a href="#">Лікарі та лікарки</a></li>
                     <li class="header__menu-list"><a href="#">Контати</a></li>
@@ -29,19 +29,23 @@
             </nav>
         </div>
     </header>
-    <section class="heal">
+
+    <section class="about">
         <div class="container">
-            <div class="heal__inner">
-                <h1 class="heal__title">
-                    Heal
-                </h1>
-                <p class="heal__subtitle">
-                    Медичний центр
+            <div class="about__inner">
+                <h2 class="about__title title">
+                    Про нас
+                </h2>
+                <p class="about__text about__text-one">
+                    Ми відкрили нашу першу лікарню  у серпні 2020-го року  у столиці. Всього лише за два роки успішної роботи ми змогли довести що в нас беспечно, приємно 
+                    та результативно.
                 </p>
-                <p class="heal__text">
-                    Всі методи діагностики та ліування дорослих та дітей щоденно
+                <p class="about__text about__text-two">
+                    Наразі в нас працюють висококваліфіковані лікарі та лікарки, які тримаються сучасних стандартів клінічних протоколів лікування, з професійними якостями та досвідом роботи.
                 </p>
-                <a class="heal__link" href="#">Запис на прийом</a>
+                <p class="about__text about__text-three">
+                    Оснащеність сучасним лабораторним обладнанням дозволяє виконувати широкий спектр досліджень.  Магнітно-резонансна та комп'ютерна томографія, ДНК-дослідження, ендоскопія, еферентні методи лікування, методи молекулярної біології та ін.
+                </p>
             </div>
         </div>
     </section>
