--- a/about-us.html
+++ b/about-us.html
@@ -15,9 +15,9 @@
     <header class="header">
         <div class="container">
             <nav class="header__menu">
-                <a class="header__logo-link" href="#"><img src="assets/images/logo.svg" alt="logo"></a>
+                <a class="header__logo-link" href="index.html"><img src="assets/images/logo.svg" alt="logo"></a>
                 <ul class="header__menu-items">
-                    <li class="header__menu-list"><a href="#">Про нас</a></li>
+                    <li class="header__menu-list"><a href="about-us.html">Про нас</a></li>
                     <li class="header__menu-list"><a href="#">Послуги та ціни</a></li>
                     <li class="header__menu-list"><a href="#">Лікарі та лікарки</a></li>
                     <li class="header__menu-list"><a href="#">Контати</a></li>
@@ -36,16 +36,18 @@
                 <h2 class="about__title title">
                     Про нас
                 </h2>
-                <p class="about__text about__text-one">
-                    Ми відкрили нашу першу лікарню  у серпні 2020-го року  у столиці. Всього лише за два роки успішної роботи ми змогли довести що в нас беспечно, приємно 
-                    та результативно.
-                </p>
-                <p class="about__text about__text-two">
-                    Наразі в нас працюють висококваліфіковані лікарі та лікарки, які тримаються сучасних стандартів клінічних протоколів лікування, з професійними якостями та досвідом роботи.
-                </p>
-                <p class="about__text about__text-three">
-                    Оснащеність сучасним лабораторним обладнанням дозволяє виконувати широкий спектр досліджень.  Магнітно-резонансна та комп'ютерна томографія, ДНК-дослідження, ендоскопія, еферентні методи лікування, методи молекулярної біології та ін.
-                </p>
+                <div class="about__texts">
+                    <p class="about__text about__text-one">
+                        Ми відкрили нашу першу лікарню  у серпні 2020-го року  у столиці. Всього лише за два роки успішної роботи ми змогли довести що в нас беспечно, приємно 
+                        та результативно.
+                    </p>
+                    <p class="about__text about__text-two">
+                        Наразі в нас працюють висококваліфіковані лікарі та лікарки, які тримаються сучасних стандартів клінічних протоколів лікування, з професійними якостями та досвідом роботи.
+                    </p>
+                    <p class="about__text about__text-three">
+                        Оснащеність сучасним лабораторним обладнанням дозволяє виконувати широкий спектр досліджень.  Магнітно-резонансна та комп'ютерна томографія, ДНК-дослідження, ендоскопія, еферентні методи лікування, методи молекулярної біології та ін.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
