--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="container">
             <nav class="header__menu">
-                <a class="header__logo-link" href="#"><img src="assets/images/logo.svg" alt="logo"></a>
+                <a class="header__logo-link" href="index.html"><img src="assets/images/logo.svg" alt="logo"></a>
                 <ul class="header__menu-items">
                     <li class="header__menu-list"><a href="about-us.html">Про нас</a></li>
                     <li class="header__menu-list"><a href="#">Послуги та ціни</a></li>
