--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                     <p class="header__search-text">Пошук</p>
                     <img class="header__search-img" src="assets/images/search.svg" alt="">
                 </div>
+                <button class="header__burger-btn" id="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </nav>
         </div>
     </header>
@@ -45,5 +50,8 @@
             </div>
         </div>
     </section>
+
+    
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
