--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="header__logo-link" href="index.html"><img src="assets/images/logo.svg" alt="logo"></a>
                 <ul class="header__menu-items">
                     <li class="header__menu-list"><a href="about-us.html">Про нас</a></li>
-                    <li class="header__menu-list"><a href="#">Послуги та ціни</a></li>
+                    <li class="header__menu-list"><a href="price.html">Послуги та ціни</a></li>
                     <li class="header__menu-list"><a href="#">Лікарі та лікарки</a></li>
                     <li class="header__menu-list"><a href="#">Контати</a></li>
                 </ul>
